--- a/manage-me/src/app/backlog-page/backlog-page.component.html
+++ b/manage-me/src/app/backlog-page/backlog-page.component.html
@@ -3,7 +3,7 @@
     <p>{{project!.description}}</p>
 </div>
 <div class="features">
-    <div class="feature" *ngFor="let feature of features">
+    <div class="feature" *ngFor="let feature of features" [routerLink]="project!.getFeatureLink(feature.id!)">
         <div class="feature-flex">
             <span class="code">{{project!.code}}-{{feature.id}}</span>
             <span class="name">{{feature.name}}</span>
