--- a/manage-me/src/app/app.component.scss
+++ b/manage-me/src/app/app.component.scss
@@ -10,6 +10,9 @@ nav {
 a {
     color: white;
     text-decoration: none;
+}
+
+a.logo {
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 4px;
