--- a/manage-me/src/app/add-feature-page/add-feature-page.component.html
+++ b/manage-me/src/app/add-feature-page/add-feature-page.component.html
@@ -1,4 +1,4 @@
-<div class="go-back"><i class="fa-solid fa-arrow-left" [routerLink]="projectService.project.getBacklogLink()"></i>Add
+<div class="go-back"><i class="fa-solid fa-arrow-left" (click)="goBack()"></i>Add
     feature</div>
 
 <form #featureForm="ngForm" (ngSubmit)="onSubmit()">
