--- a/manage-me/src/app/app.component.html
+++ b/manage-me/src/app/app.component.html
@@ -1,6 +1,9 @@
 <nav>
   <div class="nav-container">
-    <a [routerLink]="''">ManageMe</a>
+    <a class="logo" [routerLink]="''">ManageMe</a>
+    <a [routerLink]="['/TLIP/backlog']">Features</a>
+    <a [routerLink]="['/TLIP/tasks']">Tasks</a>
+    <a [routerLink]="['/TLIP/kanban']">Kanban</a>
     <span><i class="fa-solid fa-user"></i> {{user.name}} {{user.surname}}</span>
   </div>
 </nav>
