--- a/manage-me/src/app/backlog-page/backlog-page.component.html
+++ b/manage-me/src/app/backlog-page/backlog-page.component.html
@@ -1,6 +1,7 @@
 <div class="project">
     <h2>{{project!.name}}</h2>
     <p>{{project!.description}}</p>
+    <h3>Features</h3>
 </div>
 <div class="features">
     <div class="feature" *ngFor="let feature of features" [routerLink]="project!.getFeatureLink(feature.id!)">
