--- a/manage-me/src/app/display-task-page/display-task-page.component.html
+++ b/manage-me/src/app/display-task-page/display-task-page.component.html
@@ -4,7 +4,7 @@
 <p>Description: <br />{{model?.description}}</p>
 <p>Priority: {{model?.priority ? Priority[model!.priority] : Priority[Priority.High] }}</p>
 <p>Status: {{model?.state ? State[model!.state]: State[State.Todo] }}</p>
-<p>Expected time: {{model?.expectedTime }}</p>
+<p>Expected time: {{model?.expectedTime }} h</p>
 <p>Created on: {{model?.createdOn }}</p>
 <p>Started on: {{model?.startedOn ?? "Not started yet" }}</p>
 <p>Enden on: {{model?.endedOn ?? "Not ended yet" }}</p>
