--- a/manage-me/src/app/app.component.html
+++ b/manage-me/src/app/app.component.html
@@ -4,7 +4,7 @@
     <a [routerLink]="['/TLIP/backlog']">Features</a>
     <a [routerLink]="['/TLIP/tasks']">Tasks</a>
     <a [routerLink]="['/TLIP/kanban']">Kanban</a>
-    <span><i class="fa-solid fa-user"></i> {{user.name}} {{user.surname}}</span>
+    <span><i class="fa-solid fa-user"></i> {{user?.name}} {{user?.surname}}</span>
   </div>
 </nav>
 <main>
