--- a/manage-me/src/app/app.component.html
+++ b/manage-me/src/app/app.component.html
@@ -8,5 +8,7 @@
   </div>
 </nav>
 <main>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </main>
