Extracted navigation-header component.

--- a/manage-me/src/app/pages/feature/add-feature-page/add-feature-page.component.html
+++ b/manage-me/src/app/pages/feature/add-feature-page/add-feature-page.component.html
@@ -1,5 +1,4 @@
-<div class="go-back"><i class="fa-solid fa-arrow-left" (click)="goBack()"></i>Add
-    feature</div>
+<app-navigation-header>Add feature</app-navigation-header>
 
 <form #featureForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
