--- a/manage-me/src/app/pages/feature/display-feature-page/display-feature-page.component.html
+++ b/manage-me/src/app/pages/feature/display-feature-page/display-feature-page.component.html
@@ -1,4 +1,4 @@
-<div class="go-back"><i class="fa-solid fa-arrow-left" (click)="goBack()"></i>{{project!.code}}-{{model?.id}}</div>
+<app-navigation-header>{{project!.code}}-{{model?.id}}</app-navigation-header>
 
 
 <p>Name: {{model?.name}}</p>
