--- a/manage-me/src/app/pages/task/add-tasks-page/add-tasks-page.component.html
+++ b/manage-me/src/app/pages/task/add-tasks-page/add-tasks-page.component.html
@@ -1,5 +1,4 @@
-<div class="go-back"><i class="fa-solid fa-arrow-left" (click)="goBack()"></i>Add
-    task</div>
+<app-navigation-header>Add task</app-navigation-header>
 
 <form #featureForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
