--- a/manage-me/src/app/pages/feature/backlog-page/backlog-page.component.html
+++ b/manage-me/src/app/pages/feature/backlog-page/backlog-page.component.html
@@ -1,25 +1,6 @@
-<div class="project">
-    <h2>{{project!.name}}</h2>
-    <p>{{project!.description}}</p>
-    <h3>Features</h3>
-</div>
-<div class="features">
-    <div class="feature" *ngFor="let feature of features" [routerLink]="project!.getFeatureLink(feature.id!)">
-        <div class="feature-flex">
-            <span class="code">{{project!.code}}-{{feature.id}}</span>
-            <span class="name">{{feature.name}}</span>
-            <span [ngClass]="{
-            'grey': feature.state === 0,
-            'blue': feature.state === 1,
-            'green': feature.state === 2,
-        }">{{State[feature.state].toUpperCase()}}</span>
-            <i class="fa-solid" [ngClass]="{
-            'fa-arrow-up': feature.priority === 0, 
-            'fa-arrow-right': feature.priority === 1, 
-            'fa-arrow-down': feature.priority === 2}"></i>
-        </div>
-    </div>
-    <div class="feature" (click)="addNew()">
-        <div class="feature-flex add">+</div>
-    </div>
+<app-list-header [project]="project!">Features</app-list-header>
+<div>
+    <app-item *ngFor="let feature of features" [item]="feature" [project]="project!"
+        [routerLink]="project!.getFeatureLink(feature.id!)"></app-item>
+    <app-add-item (click)="addNew()"></app-add-item>
 </div>
