--- a/manage-me/src/app/pages/task/kanban-page/kanban-page.component.html
+++ b/manage-me/src/app/pages/task/kanban-page/kanban-page.component.html
@@ -1,8 +1,4 @@
-<div class="project">
-    <h2>{{project!.name}}</h2>
-    <p>{{project!.description}}</p>
-    <h3>Kanban</h3>
-</div>
+<app-list-header [project]="project!">Kanban</app-list-header>
 <div class="features">
     <div class="todo">
         <h3>Todo:</h3>
